tests/fail/fail_method_receiver_not_mim.kl
molda Mesa {
    nter largura,
}

impl Mesa {
    fn area(Mesa* self) nter {
        divolvi self.largura;
    }
}

fn inisiu() {
    Mesa mesa = Mesa { largura: 10 };
    mostran(mesa.area());
}
